fixed window overflow

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
   padding: 0;
   font-family: 'Lato', sans-serif;
   overflow: none;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #131415;
   /*-moz-user-select: none;
    -webkit-user-select: none; 
